tests/baselines/reference/breakTarget5.errors.txt
breakTarget5.ts(5,7): error TS18058: Label 'target' used before declaration.


==== breakTarget5.ts (1 errors) ====
    target:
    while (true) {
      function f() {
        while (true) {
          break target;
          ~~~~~~~~~~~~~
!!! error TS18058: Label 'target' used before declaration.
        }
      }
    }